Tirei uns atributos lá e cá

--- a/Códigos/tableone.ipynb
+++ b/Códigos/tableone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "id": "b3a3fcdb",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "id": "85dd2f8c",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "id": "aa352eb4",
    "metadata": {},
    "outputs": [],
@@ -37,52 +37,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "id": "e1f6aa28",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"\\nColunas pra adicionar: \\n\\n'D00201', 'D00301', 'D008',\\n'E011', 'E014011', 'E01601', 'E01603', 'E01605', 'E01801',\\n'I00103', 'I001031'\\n'N00101',\\n'P00103', 'P00403', \\n'P034',\\n'P05901', 'P05902', 'P05903', 'P05904',\\n'Q00101', 'Q02901', 'Q05901'\\n'Q06307', 'Q06308', 'Q06309', 'Q06310', 'Q06311',\\n'H001', 'H002',\\n\""
+       "\"\\nColunas pra adicionar: \\n\\n'H001', 'H002',\\n\""
       ]
      },
-     "execution_count": 4,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "categorical = ['V0001', 'V0026', 'V0031', 'B001', 'C006', 'C009', 'C011', 'D00901', 'D014', \n",
+    "categorical = ['V0001', 'V0026', 'V0031', 'B001', 'C006', 'C009', 'C011', 'D00901', 'D014',\n",
     "                'F001011', 'F007011', 'F008011', 'VDF001', 'G059', 'G060', 'G062', \n",
     "                'I00102', 'I006', 'I004', 'I00401', 'I00402', 'I00403', 'J001', 'J00101', 'J01101', \n",
     "                'M00203', 'M011011', 'M011021', 'M011051', 'M011071', 'N004', 'N005', 'N008', 'N010', 'N011', 'N012', 'N016', 'P02601', 'P027',\n",
-    "                'P04501', 'P04502', 'P034', 'P050', 'P051', 'P052', 'P05401', 'P05404', 'P05407', 'P05410', 'P05413', 'P05416', 'P05419', 'P06701', 'P068', \n",
-    "                'Q00201', 'Q03001', 'Q060', 'Q06306', 'Q068', 'Q11006', 'Q128', 'R034', 'T001', 'H003', 'H004', 'H010']\n",
+    "                'P04501', 'P04502', 'P050', 'P051', 'P052', 'P05401', 'P05404', 'P05407', 'P05410', 'P05413', 'P05416', 'P05419', 'P06701', 'P068', \n",
+    "                'Q00201', 'Q03001', 'Q060', 'Q06306', 'Q068', 'Q11006', 'Q128', 'R034', 'T001', 'H003', 'H004', 'H010',\n",
+    "                'D00201', 'D00301', 'D008', 'E011', 'E014011', 'E01601', 'E01801', 'I00103', 'I001031', 'P034', 'Q00101', 'Q02901', 'Q05901'] #adicionados para análise\n",
     "\n",
     "continuous = ['C008', 'E01602', 'E017', 'E01802', 'E019', 'F001021', 'F007021', 'F008021', 'VDF00102', 'P00104', 'P00404', 'P00901', \n",
-    "              'P01101', 'P02001', 'P018', 'P02002', 'P02501', 'P02602', 'P02801', 'P029', 'P035', 'P03701', 'P03702', 'P053']\n",
+    "              'P01101', 'P02001', 'P018', 'P02002', 'P02501', 'P02602', 'P02801', 'P029', 'P035', 'P03701', 'P03702', 'P053',\n",
+    "              'P00103', 'P00403', 'P05901', 'P05902', 'P05903', 'P05904'] #adicionados para análise\n",
     "\n",
     "\n",
     "'''\n",
     "Colunas pra adicionar: \n",
     "\n",
-    "'D00201', 'D00301', 'D008',\n",
-    "'E011', 'E014011', 'E01601', 'E01603', 'E01605', 'E01801',\n",
-    "'I00103', 'I001031'\n",
-    "'N00101',\n",
-    "'P00103', 'P00403', \n",
-    "'P034',\n",
-    "'P05901', 'P05902', 'P05903', 'P05904',\n",
-    "'Q00101', 'Q02901', 'Q05901'\n",
-    "'Q06307', 'Q06308', 'Q06309', 'Q06310', 'Q06311',\n",
     "'H001', 'H002',\n",
     "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "id": "b715d4e8",
    "metadata": {},
    "outputs": [
@@ -155,6 +148,22 @@
       "c:\\Users\\bkser\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\tableone\\preprocessors.py:123: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '['None' 'None' 'None' ... 'None' 8.0 8.0]' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  df.loc[:, column] = df[column].fillna(null_value)\n",
       "c:\\Users\\bkser\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\tableone\\preprocessors.py:123: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '['None' 'None' 'None' ... 'None' 'None' 'None']' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "  df.loc[:, column] = df[column].fillna(null_value)\n",
+      "c:\\Users\\bkser\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\tableone\\preprocessors.py:123: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '['None' 'None' 'None' ... 'None' 'None' 'None']' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "  df.loc[:, column] = df[column].fillna(null_value)\n",
+      "c:\\Users\\bkser\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\tableone\\preprocessors.py:123: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '[1.0 1.0 1.0 ... 1.0 1.0 1.0]' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "  df.loc[:, column] = df[column].fillna(null_value)\n",
+      "c:\\Users\\bkser\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\tableone\\preprocessors.py:123: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '[1.0 1.0 1.0 ... 1.0 1.0 1.0]' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "  df.loc[:, column] = df[column].fillna(null_value)\n",
+      "c:\\Users\\bkser\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\tableone\\preprocessors.py:123: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '['None' 'None' 'None' ... 'None' 'None' 'None']' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "  df.loc[:, column] = df[column].fillna(null_value)\n",
+      "c:\\Users\\bkser\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\tableone\\preprocessors.py:123: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '[1.0 1.0 1.0 ... 1.0 1.0 1.0]' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "  df.loc[:, column] = df[column].fillna(null_value)\n",
+      "c:\\Users\\bkser\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\tableone\\preprocessors.py:123: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '['None' 'None' 'None' ... 'None' 'None' 'None']' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "  df.loc[:, column] = df[column].fillna(null_value)\n",
+      "c:\\Users\\bkser\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\tableone\\preprocessors.py:123: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '['None' 1.0 1.0 ... 'None' 'None' 1.0]' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "  df.loc[:, column] = df[column].fillna(null_value)\n",
+      "c:\\Users\\bkser\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\tableone\\preprocessors.py:123: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '['None' 2.0 1.0 ... 'None' 'None' 2.0]' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  df.loc[:, column] = df[column].fillna(null_value)\n"
      ]
     }
@@ -168,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "id": "f33b615a",
    "metadata": {},
    "outputs": [
@@ -479,8 +488,68 @@
       "|                     | 4.0  |           | 615 (2.996)         |\n",
       "|                     | 5.0  |           | 21 (0.102)          |\n",
       "|                     | None |           | 18029 (87.826)      |\n",
+      "| D00201, n (%)       | 1.0  |           | 641 (3.123)         |\n",
+      "|                     | 2.0  |           | 19887 (96.877)      |\n",
+      "| D00301, n (%)       | 10.0 |           | 19 (0.093)          |\n",
+      "|                     | 11.0 |           | 8 (0.039)           |\n",
+      "|                     | 3.0  |           | 38 (0.185)          |\n",
+      "|                     | 4.0  |           | 98 (0.477)          |\n",
+      "|                     | 5.0  |           | 88 (0.429)          |\n",
+      "|                     | 6.0  |           | 42 (0.205)          |\n",
+      "|                     | 7.0  |           | 22 (0.107)          |\n",
+      "|                     | 8.0  |           | 213 (1.038)         |\n",
+      "|                     | 9.0  |           | 113 (0.550)         |\n",
+      "|                     | None |           | 19887 (96.877)      |\n",
+      "| D008, n (%)         | 1.0  |           | 18139 (88.362)      |\n",
+      "|                     | 2.0  |           | 1748 (8.515)        |\n",
+      "|                     | None |           | 641 (3.123)         |\n",
+      "| E011, n (%)         | 1.0  |           | 11211 (54.613)      |\n",
+      "|                     | 2.0  |           | 642 (3.127)         |\n",
+      "|                     | 3.0  |           | 82 (0.399)          |\n",
+      "|                     | None |           | 8593 (41.860)       |\n",
+      "| E014011, n (%)      | 1.0  |           | 121 (0.589)         |\n",
+      "|                     | 2.0  |           | 10 (0.049)          |\n",
+      "|                     | None |           | 20397 (99.362)      |\n",
+      "| E01601, n (%)       | 1.0  |           | 11725 (57.117)      |\n",
+      "|                     | None |           | 8803 (42.883)       |\n",
+      "| E01801, n (%)       | 1.0  |           | 707 (3.444)         |\n",
+      "|                     | None |           | 19821 (96.556)      |\n",
+      "| I00103, n (%)       | 1.0  |           | 3677 (17.912)       |\n",
+      "|                     | 2.0  |           | 165 (0.804)         |\n",
+      "|                     | None |           | 16686 (81.284)      |\n",
+      "| I001031, n (%)      | 1.0  |           | 2612 (12.724)       |\n",
+      "|                     | 2.0  |           | 977 (4.759)         |\n",
+      "|                     | 3.0  |           | 69 (0.336)          |\n",
+      "|                     | 4.0  |           | 16 (0.078)          |\n",
+      "|                     | 5.0  |           | 2 (0.010)           |\n",
+      "|                     | 6.0  |           | 1 (0.005)           |\n",
+      "|                     | None |           | 16851 (82.088)      |\n",
+      "| P00103, mean (SD)   |      | 1479      | 71.871 (14.656)     |\n",
+      "| P00403, mean (SD)   |      | 4079      | 163.947 (9.368)     |\n",
       "| P034, n (%)         | 1.0  |           | 7392 (36.009)       |\n",
-      "|                     | 2.0  |           | 13136 (63.991)      |\n"
+      "|                     | 2.0  |           | 13136 (63.991)      |\n",
+      "| P05901, mean (SD)   |      | 14127     | 18.283 (11.968)     |\n",
+      "| P05902, mean (SD)   |      | 14127     | 0.906 (2.274)       |\n",
+      "| P05903, mean (SD)   |      | 14127     | 0.175 (0.604)       |\n",
+      "| P05904, mean (SD)   |      | 14127     | 0.225 (0.902)       |\n",
+      "| Q00101, n (%)       | 1.0  |           | 15458 (75.302)      |\n",
+      "|                     | 2.0  |           | 2417 (11.774)       |\n",
+      "|                     | 3.0  |           | 1309 (6.377)        |\n",
+      "|                     | 4.0  |           | 341 (1.661)         |\n",
+      "|                     | 5.0  |           | 808 (3.936)         |\n",
+      "|                     | 6.0  |           | 195 (0.950)         |\n",
+      "| Q02901, n (%)       | 1.0  |           | 9554 (46.541)       |\n",
+      "|                     | 2.0  |           | 3903 (19.013)       |\n",
+      "|                     | 3.0  |           | 2890 (14.078)       |\n",
+      "|                     | 4.0  |           | 970 (4.725)         |\n",
+      "|                     | 5.0  |           | 2039 (9.933)        |\n",
+      "|                     | 6.0  |           | 1172 (5.709)        |\n",
+      "| Q05901, n (%)       | 1.0  |           | 8969 (43.692)       |\n",
+      "|                     | 2.0  |           | 4042 (19.690)       |\n",
+      "|                     | 3.0  |           | 2979 (14.512)       |\n",
+      "|                     | 4.0  |           | 1046 (5.095)        |\n",
+      "|                     | 5.0  |           | 2071 (10.089)       |\n",
+      "|                     | 6.0  |           | 1421 (6.922)        |\n"
      ]
     }
    ],
@@ -490,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "id": "3145d4e2",
    "metadata": {},
    "outputs": [
@@ -498,6 +567,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{i}, mean (SD / min / max) {l}\n",
+      "{i}, mean (SD / min / max) {l}\n",
+      "{i}, mean (SD / min / max) {l}\n",
+      "{i}, mean (SD / min / max) {l}\n",
+      "{i}, mean (SD / min / max) {l}\n",
+      "{i}, mean (SD / min / max) {l}\n",
       "{i}, mean (SD / min / max) {l}\n",
       "{i}, mean (SD / min / max) {l}\n",
       "{i}, mean (SD / min / max) {l}\n",
