--- a/Códigos/1_trabalhoPNS.ipynb
+++ b/Códigos/1_trabalhoPNS.ipynb
@@ -1488,14 +1488,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "9b940021",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"\\nColunas adicionadas: \\n\\n'D00201', 'D00301', 'D008',\\n'E011', 'E014011', 'E01601', 'E01603', 'E01605', 'E01801',\\n'I00103', 'I001031'\\n'N00101',\\n'P00103', 'P00403', \\n'P034',\\n'P05901', 'P05902', 'P05903', 'P05904',\\n'Q00101', 'Q02901', 'Q05901'\\n'H001', 'H002',\\n\""
+       "\"\\nColunas adicionadas: \\n\\n'D00201', 'D00301', 'D008',\\n'E011', 'E014011', 'E01601', 'E01801',\\n'I00103', 'I001031'\\n'N00101',\\n'P00103', 'P00403', \\n'P034',\\n'P05901', 'P05902', 'P05903', 'P05904',\\n'Q00101', 'Q02901', 'Q05901'\\n'H001', 'H002',\\n\""
       ]
      },
      "execution_count": 4,
@@ -1506,8 +1506,8 @@
    "source": [
     "# Merge para adicionar colunas da pns2019 na base_sem_outliers\n",
     "base_sem_outliers = base_sem_outliers.merge(\n",
-    "    pns2019[['chave_pessoa', 'D00201', 'D00301', 'D008', 'E011', 'E014011', 'E01601', 'E01603', 'E01605', 'E01801',\n",
-    "             'I00103', 'I001031', 'N00101', 'P00103', 'P00403', 'P034', 'P05901', 'P05902', 'P05903', 'P05904', 'Q00101', 'Q02901', \n",
+    "    pns2019[['chave_pessoa', 'D00201', 'D00301', 'D008', 'E011', 'E014011', 'E01601', 'E01801',\n",
+    "             'I00103', 'I001031', 'P00103', 'P00403', 'P034', 'P05901', 'P05902', 'P05903', 'P05904', 'Q00101', 'Q02901', \n",
     "             'Q05901', 'H001', 'H002',]],\n",
     "    on='chave_pessoa',\n",
     "    how='left' # ou 'right', 'inner', 'outer' conforme necessidade\n",
@@ -1517,9 +1517,8 @@
     "Colunas adicionadas: \n",
     "\n",
     "'D00201', 'D00301', 'D008',\n",
-    "'E011', 'E014011', 'E01601', 'E01603', 'E01605', 'E01801',\n",
+    "'E011', 'E014011', 'E01601', 'E01801',\n",
     "'I00103', 'I001031'\n",
-    "'N00101',\n",
     "'P00103', 'P00403', \n",
     "'P034',\n",
     "'P05901', 'P05902', 'P05903', 'P05904',\n",
