Arrumei uns trens

--- a/Códigos/tabela_atributos_latex.ipynb
+++ b/Códigos/tabela_atributos_latex.ipynb
@@ -2,43 +2,74 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "69119ac6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "All arrays must be of the same length",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 50\u001b[0m\n\u001b[0;32m      4\u001b[0m atributos \u001b[38;5;241m=\u001b[39m [\n\u001b[0;32m      5\u001b[0m        \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mV0001\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mV0026\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mB001\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mC009\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mN016\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mP00104\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mP00404\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mP01101\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m      6\u001b[0m        \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mP02001\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mP018\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mP02501\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mP02602\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mP04502\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mP068\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mQ00201\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     10\u001b[0m        \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mInicio_tabagismo\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTempo_parou_fumar\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mIntensidade_fumo\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     11\u001b[0m        \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mConsumo_alcool\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m     14\u001b[0m descricoes \u001b[38;5;241m=\u001b[39m [\n\u001b[0;32m     15\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUnidade da Federação\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;66;03m#V0001 \u001b[39;00m\n\u001b[0;32m     16\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTipo de situação censitária (Urbano, Rural)\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;66;03m#V0026\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     47\u001b[0m    \n\u001b[0;32m     48\u001b[0m ]\n\u001b[1;32m---> 50\u001b[0m df_tabela \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mDataFrame\u001b[49m\u001b[43m(\u001b[49m\u001b[43m{\u001b[49m\n\u001b[0;32m     51\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mAtributo\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43matributos\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m     52\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mDescrição\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mdescricoes\u001b[49m\n\u001b[0;32m     53\u001b[0m \u001b[43m}\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     55\u001b[0m dfi\u001b[38;5;241m.\u001b[39mexport(df_tabela, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtabela_atributos.png\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\bkser\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\pandas\\core\\frame.py:778\u001b[0m, in \u001b[0;36mDataFrame.__init__\u001b[1;34m(self, data, index, columns, dtype, copy)\u001b[0m\n\u001b[0;32m    772\u001b[0m     mgr \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_init_mgr(\n\u001b[0;32m    773\u001b[0m         data, axes\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mindex\u001b[39m\u001b[38;5;124m\"\u001b[39m: index, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcolumns\u001b[39m\u001b[38;5;124m\"\u001b[39m: columns}, dtype\u001b[38;5;241m=\u001b[39mdtype, copy\u001b[38;5;241m=\u001b[39mcopy\n\u001b[0;32m    774\u001b[0m     )\n\u001b[0;32m    776\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(data, \u001b[38;5;28mdict\u001b[39m):\n\u001b[0;32m    777\u001b[0m     \u001b[38;5;66;03m# GH#38939 de facto copy defaults to False only in non-dict cases\u001b[39;00m\n\u001b[1;32m--> 778\u001b[0m     mgr \u001b[38;5;241m=\u001b[39m \u001b[43mdict_to_mgr\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcopy\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcopy\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtyp\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmanager\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    779\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(data, ma\u001b[38;5;241m.\u001b[39mMaskedArray):\n\u001b[0;32m    780\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mma\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m mrecords\n",
+      "File \u001b[1;32mc:\\Users\\bkser\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\pandas\\core\\internals\\construction.py:503\u001b[0m, in \u001b[0;36mdict_to_mgr\u001b[1;34m(data, index, columns, dtype, typ, copy)\u001b[0m\n\u001b[0;32m    499\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    500\u001b[0m         \u001b[38;5;66;03m# dtype check to exclude e.g. range objects, scalars\u001b[39;00m\n\u001b[0;32m    501\u001b[0m         arrays \u001b[38;5;241m=\u001b[39m [x\u001b[38;5;241m.\u001b[39mcopy() \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(x, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdtype\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01melse\u001b[39;00m x \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m arrays]\n\u001b[1;32m--> 503\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43marrays_to_mgr\u001b[49m\u001b[43m(\u001b[49m\u001b[43marrays\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtyp\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtyp\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconsolidate\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcopy\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\bkser\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\pandas\\core\\internals\\construction.py:114\u001b[0m, in \u001b[0;36marrays_to_mgr\u001b[1;34m(arrays, columns, index, dtype, verify_integrity, typ, consolidate)\u001b[0m\n\u001b[0;32m    111\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m verify_integrity:\n\u001b[0;32m    112\u001b[0m     \u001b[38;5;66;03m# figure out the index, if necessary\u001b[39;00m\n\u001b[0;32m    113\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m index \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m--> 114\u001b[0m         index \u001b[38;5;241m=\u001b[39m \u001b[43m_extract_index\u001b[49m\u001b[43m(\u001b[49m\u001b[43marrays\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    115\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    116\u001b[0m         index \u001b[38;5;241m=\u001b[39m ensure_index(index)\n",
+      "File \u001b[1;32mc:\\Users\\bkser\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\pandas\\core\\internals\\construction.py:677\u001b[0m, in \u001b[0;36m_extract_index\u001b[1;34m(data)\u001b[0m\n\u001b[0;32m    675\u001b[0m lengths \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mset\u001b[39m(raw_lengths))\n\u001b[0;32m    676\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(lengths) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m--> 677\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAll arrays must be of the same length\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    679\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m have_dicts:\n\u001b[0;32m    680\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    681\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMixing dicts with non-Series may lead to ambiguous ordering.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    682\u001b[0m     )\n",
+      "\u001b[1;31mValueError\u001b[0m: All arrays must be of the same length"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import dataframe_image as dfi\n",
     "\n",
     "atributos = [\n",
-    "    'V0001', 'V0026', 'V0031', 'B001', 'C006', 'C008', 'C009', 'C011',\n",
-    "       'J001', 'J00101', 'J01101', 'M00203', 'N010', 'N011', 'N012', 'N016',\n",
-    "       'P00104', 'P00404', 'P00901', 'P01101', 'P02001', 'P018', 'P02002',\n",
-    "       'P02501', 'P02602', 'P02601', 'P04501', 'P04502', 'P06701', 'P068',\n",
-    "       'Q00201', 'Q03001', 'Q060', 'Q06306', 'Q068', 'Q11006', 'Q128', 'T001',\n",
-    "       'H003', 'H004', 'H010', 'N00101', 'H001', 'H002', 'Escolaridade',\n",
+    "       'V0001', 'V0026', 'B001', 'C009', 'N016', 'P00104', 'P00404', 'P01101',\n",
+    "       'P02001', 'P018', 'P02501', 'P02602', 'P04502', 'P068', 'Q00201',\n",
+    "       'Q03001', 'Q06306', 'Q11006', 'Q128', 'T001', 'N00101', 'Escolaridade',\n",
     "       'Renda', 'Quant_trabalhos', 'Carga_horaria_semanal',\n",
-    "       'Mobilidade_assistida', 'Avaliacao_plano', 'Instituicao_plano',\n",
-    "       'Cobertura_plano', 'Exposicao_quimica', 'Exposicao_ruido',\n",
-    "       'Exposicao_lixo', 'Exposicao_minerio', 'Atividade_fisica_semanal',\n",
+    "       'Instituicao_plano', 'Cobertura_plano', 'Atividade_fisica_semanal',\n",
     "       'Inicio_tabagismo', 'Tempo_parou_fumar', 'Intensidade_fumo',\n",
-    "       'Consumo_alcool', 'Faixa_imc', 'Doenca_limitante'\n",
-    "]\n",
+    "       'Consumo_alcool']\n",
+    "       \n",
+    "\n",
     "descricoes = [\n",
     "    \"Unidade da Federação\", #V0001 \n",
     "    \"Tipo de situação censitária (Urbano, Rural)\", #V0026\n",
-    "    \"\" #B001\n",
-    "    \"Tipo de área (Capital, Resto da RM, Ride, Resto da UF)\", #V0031\n",
-    "    \"Sexo (Masculino, Feminino)\", #C006\n",
-    "    \"Idade do morador na data de referência\", #C008\n",
+    "    \"Domicílio cadastrado na unidade de saúde da família\" #B001\n",
     "    \"Cor ou raça (Branca, Preta, Parda, Outra)\", #C009\n",
-    "    \"Estado civil (Casado, Divorciado, Viúvo, Solteiro)\", #C011\n",
-    "    \"\" #J001\n",
-    "    \"Avaliação pessoal do bem estar físico e mental\" #J00101\n",
-    "    \"\" #J01101\n",
-    "    \n",
-    "\n",
-    "\n",
+    "    \"Frequência de sintomas depressivos\", #N016\n",
+    "    \"Peso\", #P00104\n",
+    "    \"Altura\", #P00404\n",
+    "    \"Quantos dias da semana costuma comer carne vermelha\", #P01101\n",
+    "    \"Quantos dias da semana costuma tomar suco de caixinha/lata ou refresco em pó\", #P02001\n",
+    "    \"Quantos dias da semana costuma comer frutas\", #P018\n",
+    "    \"Quantos dias da semana costuma comer alimentos doces\", #P02501\n",
+    "    \"Quantos dias da semana costuma substituir a refeição do almoço por lanches rápidos\", #P02602\n",
+    "    \"Quantas horas por dia consome outros tipos de eletrônicos\", #P04502\n",
+    "    \"Com que frequência alguém fuma dentro do domicílio\", #P068\n",
+    "    \"Diagnóstico de hipertensão arterial\", #Q00201\n",
+    "    \"Diagnóstico de diabetes\", #Q03001\n",
+    "    \"Diagnóstico de uma doença do coração\", #Q06306\n",
+    "    \"Diagnóstico de outra doença mental\", #Q11006\n",
+    "    \"Diagnóstico de outra doença crônica ou doença de longa duração\", #Q128\n",
+    "    \"Está com tosse há três semanas ou mais\", #T001\n",
+    "    \"Como você avalia o seu estado de saúde\", #N00101\n",
+    "    \"Nível mais alto de escolaridade\", #Escolaridade\n",
+    "    \"Soma da renda total\", #Renda\n",
+    "    \"Quantidade de trabalhos\", #Quant_trabalhos\n",
+    "    \"Horas totais trabalhadas semanalmente\", #Carga_horaria_semanal\n",
+    "    \"Classificação do plano de saúde (público ou privado)\", #Instituicao_plano\n",
+    "    \"Nível de cobertura do plano de saúde\", #Cobertura_plano\n",
+    "    \"empo total de exercício físico praticado na semana\", #Atividade_fisica_semanal\n",
+    "    \"Idade que começou a fumar\", #Inicio_tabagismo\n",
+    "    \"Há quanto tempo parou de fumar\", #Tempo_parou_fumar\n",
+    "    \"Intensidade do consumo de tabaco\", #Intensidade_fumo\n",
+    "    \"Intensidade do consumo de bebida alcoólica\", #Consumo_alcool\n",
+    "   \n",
     "]\n",
     "\n",
     "df_tabela = pd.DataFrame({\n",
@@ -51,8 +82,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
