--- a/Códigos/metodo_selecao_atributos.ipynb
+++ b/Códigos/metodo_selecao_atributos.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "53e6590d",
+   "metadata": {},
+   "source": [
+    "#### **Random Ant Colony Instance and Feature Selection**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "b6151b2c",
    "metadata": {},
    "outputs": [],
@@ -13,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "34597ddc",
    "metadata": {},
    "outputs": [],
@@ -23,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "5b179d9a",
    "metadata": {},
    "outputs": [],
@@ -34,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "15dadb81",
    "metadata": {},
    "outputs": [],
@@ -44,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "d79846ec",
    "metadata": {},
    "outputs": [],
@@ -57,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "47874f8f",
    "metadata": {},
    "outputs": [],
@@ -68,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "175fbca6",
    "metadata": {},
    "outputs": [],
@@ -78,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "8b0b0a7c",
    "metadata": {},
    "outputs": [],
@@ -88,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "044d26b1",
    "metadata": {},
    "outputs": [
@@ -96,9 +104,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[    1     2     5 ... 12185 12186 12187]\n",
-      "[ 0  1  3  5  6  8  9 12 13 14 15 16 17 19 20 21 23 24 27 28 29 30 31 33\n",
-      " 35 36 37 38 39 41 42 43 44 45 46 47 49 50 51 53 54 55 56 57 58 59 60]\n"
+      "[    0     1     2 ... 12189 12190 12192]\n",
+      "[ 0  1  5  6  8 11 12 14 15 18 19 20 25 26 27 28 29 31 32 33 34 35 36 37\n",
+      " 38 39 40 41 43 45 46 47 48 50 51 52 53 54 55 56 57 58]\n"
      ]
     }
    ],
@@ -108,8 +116,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2a8ccef7",
+   "metadata": {},
+   "source": [
+    "#### Salvando a base com apenas os atributos selecionados:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "e76a994a",
    "metadata": {},
    "outputs": [
@@ -117,14 +133,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['V0001', 'V0026', 'B001', 'C008', 'C009', 'J001', 'J00101', 'N010', 'N011', 'N012', 'N016', 'P00104', 'P00404', 'P01101', 'P02001', 'P018', 'P02501', 'P02602', 'P04502', 'P06701', 'P068', 'Q00201', 'Q03001', 'Q06306', 'Q11006', 'Q128', 'T001', 'H003', 'H004', 'N00101', 'H001', 'H002', 'Escolaridade', 'Renda', 'Quant_trabalhos', 'Carga_horaria_semanal', 'Avaliacao_plano', 'Instituicao_plano', 'Cobertura_plano', 'Exposicao_ruido', 'Exposicao_lixo', 'Exposicao_minerio', 'Atividade_fisica_semanal', 'Inicio_tabagismo', 'Tempo_parou_fumar', 'Intensidade_fumo', 'Consumo_alcool']\n"
+      "['V0001', 'V0026', 'C008', 'C009', 'J001', 'M00203', 'N010', 'N012', 'N016', 'P02001', 'P018', 'P02002', 'P04502', 'P06701', 'P068', 'Q00201', 'Q03001', 'Q06306', 'Q068', 'Q11006', 'Q128', 'T001', 'H003', 'H004', 'H010', 'N00101', 'H001', 'H002', 'Renda', 'Carga_horaria_semanal', 'Mobilidade_assistida', 'Avaliacao_plano', 'Instituicao_plano', 'Exposicao_quimica', 'Exposicao_ruido', 'Exposicao_lixo', 'Exposicao_minerio', 'Atividade_fisica_semanal', 'Inicio_tabagismo', 'Tempo_parou_fumar', 'Intensidade_fumo', 'Consumo_alcool']\n"
      ]
     }
    ],
    "source": [
-    "# Lista dos índices\n",
-    "indices = [0, 1, 3, 5, 6, 8, 9, 12, 13, 14, 15, 16, 17, 19, 20, 21, 23, 24, 27, 28, 29, 30, 31, 33,\n",
-    "           35, 36, 37, 38, 39, 41, 42, 43, 44, 45, 46, 47, 49, 50, 51, 53, 54, 55, 56, 57, 58, 59, 60]\n",
+    "# Lista dos índices (primeira execução) / 6_base_final\n",
+    "# indices = [0, 1, 3, 5, 6, 8, 9, 12, 13, 14, 15, 16, 17, 19, 20, 21, 23, 24, 27, 28, 29, 30, 31, 33,\n",
+    "#           35, 36, 37, 38, 39, 41, 42, 43, 44, 45, 46, 47, 49, 50, 51, 53, 54, 55, 56, 57, 58, 59, 60]\n",
+    "\n",
+    "# Lista dos índices (segunda execução)\n",
+    "indices = [ 0,  1,  5,  6,  8, 11, 12, 14, 15, 18, 19, 20, 25, 26, 27, 28, 29, 31, 32, 33, 34, 35, 36, 37,\n",
+    "            38, 39, 40, 41, 43, 45, 46, 47, 48, 50, 51, 52, 53, 54, 55, 56, 57, 58]\n",
     "\n",
     "# Lê a base\n",
     "df = pd.read_csv('../Bases/Criados/5_base_codificada.csv')\n",
@@ -138,24 +158,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "835dedf1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Base salva com sucesso.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Selecionar apenas as colunas pelos índices\n",
     "df_selecionado = df.iloc[:, indices]\n",
     "\n",
     "# Salvar em um novo arquivo CSV\n",
-    "df_selecionado.to_csv('../Bases/Criados/6_base_final.csv', index=False)"
+    "df_selecionado.to_csv('../Bases/Criados/6.1_base_final.csv', index=False)"
    ]
   }
  ],
